Add Reset on Pause option
- New option to reset camera springs when game is paused (menus, console, etc.)
- Default: false (maintains current behavior)
- When enabled, prevents jarring camera jumps when closing menus
- Added to Settling Behavior section in menu

--- a/FPCameraSettle.ini
+++ b/FPCameraSettle.ini
@@ -35,6 +35,12 @@ fSettleDampingMult=2.0
 ; 5-8: Very stable, higher CPU cost
 iSpringSubsteps=4
 
+[Behavior]
+; Reset camera springs when game is paused (menus, console, etc.)
+; When enabled, opening any menu will smoothly reset the camera,
+; preventing jarring jumps when you close the menu.
+bResetOnPause=false
+
 [Debug]
 ; Enable detailed debug logging
 bDebugLogging=false
