Move Reset on Pause and Performance settings to General Settings
- Moved 'Reset on Pause' from Settling Behavior to General Settings
- Moved 'Spring Substeps' from Performance section to General Settings
- Consolidated all general/global options in one place
- Removed separate [Performance] and [Behavior] INI sections

--- a/FPCameraSettle.ini
+++ b/FPCameraSettle.ini
@@ -8,6 +8,10 @@ bEnabled=true
 fGlobalIntensity=1.0
 ; Input smoothing (0 = none, 1 = maximum)
 fSmoothingFactor=0.3
+; Reset camera springs when game is paused (menus, console, etc.)
+bResetOnPause=false
+; Number of physics sub-steps per frame (1-8, higher = more stable but slower)
+iSpringSubsteps=4
 
 [WeaponState]
 ; Enable effects when weapon is drawn
@@ -26,20 +30,6 @@ fSettleDelay=0.1
 fSettleSpeed=3.0
 ; Max damping multiplier when settled
 fSettleDampingMult=2.0
-
-[Performance]
-; Number of physics sub-steps per frame (1-8)
-; Higher = more stable/accurate, Lower = better performance
-; 1-2: Fast, may be jittery with large movements
-; 3-4: Balanced (recommended)
-; 5-8: Very stable, higher CPU cost
-iSpringSubsteps=4
-
-[Behavior]
-; Reset camera springs when game is paused (menus, console, etc.)
-; When enabled, opening any menu will smoothly reset the camera,
-; preventing jarring jumps when you close the menu.
-bResetOnPause=false
 
 [Debug]
 ; Enable detailed debug logging
