Make Disable on Pause fully disable camera transforms
- Renamed 'Reset on Pause' to 'Disable on Pause'
- Now stops applying camera offsets while game is paused (not just reset)
- Prevents any camera transforms during menus/console

--- a/FPCameraSettle.ini
+++ b/FPCameraSettle.ini
@@ -8,7 +8,8 @@ bEnabled=true
 fGlobalIntensity=1.0
 ; Input smoothing (0 = none, 1 = maximum)
 fSmoothingFactor=0.3
-; Reset camera springs when game is paused (menus, console, etc.)
+; Disable camera effects when game is paused (menus, console, etc.)
+; When enabled, resets springs and stops applying offsets during menus
 bResetOnPause=false
 ; Number of physics sub-steps per frame (1-8, higher = more stable but slower)
 iSpringSubsteps=4
