Add idle camera noise and sprint effects
New Features:
- Idle Camera Noise: Subtle breathing/sway motion when standing still
  - Separate settings for weapon drawn vs sheathed
  - Configurable position amplitude (X/Y/Z)
  - Configurable rotation amplitude (pitch/roll/yaw)
  - Adjustable frequency

- Sprint Effects:
  - FOV Delta: Increase FOV when sprinting for sense of speed
  - Radial Blur: Optional blur effect when sprinting (requires game IMOD)
  - Smooth blending in/out based on configurable speed

Menu Integration:
- New 'Idle Camera Noise' section with weapon state tabs
- New 'Sprint Effects' section with FOV and blur controls

--- a/FPCameraSettle.ini
+++ b/FPCameraSettle.ini
@@ -32,6 +32,56 @@ fSettleSpeed=3.0
 ; Max damping multiplier when settled
 fSettleDampingMult=2.0
 
+[IdleNoise_Drawn]
+; Enable subtle camera motion when standing idle (weapon drawn)
+bEnabled=false
+; Position amplitude X (left/right)
+fPosAmpX=0.0
+; Position amplitude Y (forward/back)
+fPosAmpY=0.0
+; Position amplitude Z (up/down breathing)
+fPosAmpZ=0.02
+; Rotation amplitude pitch (degrees)
+fRotAmpX=0.1
+; Rotation amplitude roll (degrees)
+fRotAmpY=0.0
+; Rotation amplitude yaw (degrees)
+fRotAmpZ=0.05
+; Noise frequency (cycles per second)
+fFrequency=0.3
+
+[IdleNoise_Sheathed]
+; Enable subtle camera motion when standing idle (weapon sheathed)
+bEnabled=true
+; Position amplitude X (left/right)
+fPosAmpX=0.0
+; Position amplitude Y (forward/back)
+fPosAmpY=0.0
+; Position amplitude Z (up/down breathing)
+fPosAmpZ=0.03
+; Rotation amplitude pitch (degrees)
+fRotAmpX=0.15
+; Rotation amplitude roll (degrees)
+fRotAmpY=0.0
+; Rotation amplitude yaw (degrees)
+fRotAmpZ=0.08
+; Noise frequency (cycles per second)
+fFrequency=0.25
+
+[SprintEffects]
+; Enable FOV increase when sprinting
+bFovEnabled=true
+; FOV increase when sprinting (degrees)
+fFovDelta=10.0
+; How fast to blend FOV (higher = faster)
+fFovBlendSpeed=3.0
+; Enable radial blur when sprinting
+bBlurEnabled=false
+; Radial blur strength (0-1)
+fBlurStrength=0.3
+; How fast to blend blur (higher = faster)
+fBlurBlendSpeed=3.0
+
 [Debug]
 ; Enable detailed debug logging
 bDebugLogging=false
