Add custom radial blur shader for sprint effect
- Create Graphics.h/cpp with RadialBlurManager class
- Implement D3D11-based radial blur post-process effect
- Hook IDXGISwapChain::Present to inject the blur pass
- Compile shaders at runtime using D3DCompile
- Replace ImageSpaceManager approach with custom shader
- Full control over blur intensity, center, and sample count
- Handles resolution changes automatically
- Cheap and efficient with 8 samples by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ set(SOURCES
 	src/Settings.cpp
 	src/CameraSettle.cpp
 	src/Menu.cpp
+	src/Graphics.cpp
 )
 
 set(HEADERS
@@ -46,6 +47,7 @@ set(HEADERS
 	src/CameraSettle.h
 	src/Menu.h
 	src/SKSEMenuFramework.h
+	src/Graphics.h
 )
 
 # Create DLL
