Add user-adjustable radial blur ramp settings
- Added Ramp Up Time slider (0-0.5 sec) - how fast blur appears
- Added Ramp Down Time slider (0-0.5 sec) - how fast blur fades
- These control the IMOD's internal interpolation timing
- Updated INI file with new settings
- Settings are applied to radialBlur.rampUp/rampDown floatValues

--- a/FPCameraSettle.ini
+++ b/FPCameraSettle.ini
@@ -81,6 +81,10 @@ bBlurEnabled=false
 fBlurStrength=0.3
 ; How fast to blend blur (higher = faster)
 fBlurBlendSpeed=3.0
+; IMOD ramp up time in seconds (how fast blur appears)
+fBlurRampUp=0.1
+; IMOD ramp down time in seconds (how fast blur fades)
+fBlurRampDown=0.2
 
 [Debug]
 ; Enable detailed debug logging
