Add Center Clarity setting for radial blur
- New 'Center Clarity' slider (0-1) controls blur start radius
- 0 = blur from center (original behavior)
- 0.5 = center half stays clear (default)
- 1 = only edges are blurred
- Uses radialBlur.start IMOD parameter

--- a/FPCameraSettle.ini
+++ b/FPCameraSettle.ini
@@ -85,6 +85,8 @@ fBlurBlendSpeed=3.0
 fBlurRampUp=0.1
 ; IMOD ramp down time in seconds (how fast blur fades)
 fBlurRampDown=0.2
+; Blur start radius (0 = blur from center, 1 = edges only)
+fBlurRadius=0.5
 
 [Debug]
 ; Enable detailed debug logging
