Disable Idle Noise in dialogue option, add seperate actions for sneak, better blending for walk->run

--- a/FPCameraSettle.ini
+++ b/FPCameraSettle.ini
@@ -68,6 +68,12 @@ fRotAmpZ=0.08
 ; Noise frequency (cycles per second)
 fFrequency=0.25
 
+[IdleNoise]
+; Blend in/out time in seconds
+fBlendTime=0.25
+; Disable idle camera noise in dialogue and map menus (blends out smoothly)
+bDialogueDisableIdleNoise=false
+
 [SprintEffects]
 ; Enable FOV increase when sprinting
 bFovEnabled=true
