Clean up FOV punch implementation

--- a/FPCameraSettle.ini
+++ b/FPCameraSettle.ini
@@ -94,6 +94,18 @@ fBlurRampDown=0.2
 ; Blur start radius (0 = blur from center, 1 = edges only)
 fBlurRadius=0.5
 
+[FOVPunch]
+; Enable FOV punch when taking a hit
+bHitEnabled=true
+; Enable FOV punch on arrow/bolt release
+bArrowEnabled=true
+; Hit punch strength as percent of current FOV (e.g., 5.0 = +/-5%)
+fHitStrength=5.0
+; Arrow punch strength as percent of current FOV (e.g., 3.0 = +/-3%)
+fArrowStrength=3.0
+; Total punch duration in seconds
+fDuration=0.25
+
 [Debug]
 ; Enable detailed debug logging
 bDebugLogging=false
