Scale down camera idle noise when aiming a bow or crossbow

--- a/FPCameraSettle.ini
+++ b/FPCameraSettle.ini
@@ -73,6 +73,12 @@ fFrequency=0.25
 fBlendTime=0.25
 ; Disable idle camera noise in dialogue and map menus (blends out smoothly)
 bDialogueDisableIdleNoise=false
+; Scale idle noise down while drawing bow/crossbow
+bScaleDuringArchery=true
+; Scale amount while drawing (0-1, e.g., 0.1 = 10%)
+fArcheryScaleAmount=0.1
+; Scale amount based on Archery skill (100 = 0)
+bArcheryScaleBySkill=false
 
 [SprintEffects]
 ; Enable FOV increase when sprinting
